{
    "name": "Input Actions",
    "maps": [
        {
            "name": "Game",
            "id": "1d474c39-39cb-4519-979c-790ce68e8c6b",
            "actions": [
                {
                    "name": "PerformAction",
                    "type": "Button",
                    "id": "18b03444-44dc-4d62-ac6d-b33bd63f9501",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CancelAction",
                    "type": "Button",
                    "id": "c5c36624-fe3c-40d7-8ccb-616097a96bc8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "cdaa10f1-17dd-45e6-9382-c95631a66a07",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b60e25dc-facd-45f6-942b-63f2c49f5b7a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PerformAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "746ffe2e-fb86-485d-af15-796167811dc3",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CancelAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1a88cefc-a835-447b-b322-3720ad071d4d",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}